tests/reference/asr-continue_compilation_2-a6145a1.stderr
syntax error: End module name does not match module name
  --> tests/errors/continue_compilation_2.f90:20:1 - 22:28
   |
20 |    module my_module
   |    ^^^^^^^^^^^^^^^^...
...
   |
22 |    end module wrong_module_name
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End subroutine name does not match subroutine name
  --> tests/errors/continue_compilation_2.f90:44:5 - 46:33
   |
44 |        subroutine my_subroutine1()
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
46 |        end subroutine different_name
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End function name does not match function name
  --> tests/errors/continue_compilation_2.f90:48:5 - 51:32
   |
48 |        function my_function() result(res)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
51 |        end function not_my_function
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End subroutine name does not match subroutine name
  --> tests/errors/continue_compilation_2.f90:53:5 - 55:33
   |
53 |        subroutine my_subroutine2()
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
55 |        end subroutine different_name 
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: Invalid syntax for variable initialization (try inserting '::' after the type)
   --> tests/errors/continue_compilation_2.f90:190:5
    |
190 |     integer init_x = 1
    |     ^^^^^^^^^^^^^^^^^^ 

syntax error: kind 16 is not supported yet.
   --> tests/errors/continue_compilation_2.f90:280:5
    |
280 |     real*16 :: unsupported_kind
    |     ^^^^^^^ 

tokenizer error: Token '?' is not recognized
   --> tests/errors/continue_compilation_2.f90:286:17
    |
286 |     integer  :: ? tokenizer_error
    |                 ^ token not recognized

tokenizer error: Token '@' is not recognized in `format` statement
   --> tests/errors/continue_compilation_2.f90:555:21
    |
555 |     100 FORMAT(A10, @)
    |                     ^ 

semantic error: Global name is already being used
  --> tests/errors/continue_compilation_2.f90:24:1 - 25:21
   |
24 |    subroutine myname
   |    ^^^^^^^^^^^^^^^^^...
...
   |
25 |    end subroutine myname
   | ...^^^^^^^^^^^^^^^^^^^^^ 'myname' defined here
   |
27 |    block data myname
   |    ^^^^^^^^^^^^^^^^^...
...
   |
29 |    
   | ...^ 'myname' defined here again

semantic error: Duplicate DIMENSION attribute specified
  --> tests/errors/continue_compilation_2.f90:35:24
   |
35 |         common /rowns/ rowns(209)
   |                        ^^^^^^^^^^ 

semantic error: Intent attribute can only be applied to procedure arguments
  --> tests/errors/continue_compilation_2.f90:58:18
   |
58 |         INTEGER, INTENT(IN) :: sub_a
   |                  ^^^^^^^^^^ 

semantic error: Dummy argument 'a' not defined
  --> tests/errors/continue_compilation_2.f90:57:5 - 59:36
   |
57 |        SUBROUTINE faulty_subroutine(a, b, c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
59 |        END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Dummy argument 'b' not defined
  --> tests/errors/continue_compilation_2.f90:57:5 - 59:36
   |
57 |        SUBROUTINE faulty_subroutine(a, b, c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
59 |        END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Dummy argument 'c' not defined
  --> tests/errors/continue_compilation_2.f90:57:5 - 59:36
   |
57 |        SUBROUTINE faulty_subroutine(a, b, c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
59 |        END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Assumed-rank variable 'x' must not have any dimensions specified.
  --> tests/errors/continue_compilation_2.f90:82:20
   |
82 |         integer :: x(.., 5)
   |                    ^^^^^^^^ 

semantic error: Dummy argument 'x' not defined
  --> tests/errors/continue_compilation_2.f90:81:5 - 83:24
   |
81 |        subroutine arank(x)
   |        ^^^^^^^^^^^^^^^^^^^...
...
   |
83 |        end subroutine arank
   | ...^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: OPTIONAL dummy argument 'n' cannot be used for array bounds declaration
   --> tests/errors/continue_compilation_2.f90:107:21
    |
107 |         real :: arr(n)
    |                     ^ hint: use a non-optional argument, or declare the array as `allocatable`

semantic error: Implicit typing is not allowed, enable it by using --implicit-typing 
   --> tests/errors/continue_compilation_2.f90:185:5 - 187:49
    |
185 |        implicit real(a-z)
    |        ^^^^^^^^^^^^^^^^^^...
...
    |
187 |        ! Put declarations below without empty lines
    | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `parameter` attribute conflicts with `pointer` attribute
   --> tests/errors/continue_compilation_2.f90:188:5
    |
188 |     integer, pointer, parameter :: v => null()
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `parameter` attribute conflicts with `allocatable` attribute
   --> tests/errors/continue_compilation_2.f90:189:5
    |
189 |     integer, allocatable, parameter :: v=1
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `kind` argument of `int` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:250:54
    |
250 |     integer(8), parameter :: ar1(3) = int([1, 2, 3], [8, 8, 8])
    |                                                      ^^^^^^^^^ 

semantic error: `kind` argument of `int` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:252:54
    |
252 |     integer(8), parameter :: ar2(3) = int([1, 2, 3], [8, 8, 8])
    |                                                      ^^^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters
   --> tests/errors/continue_compilation_2.f90:254:13
    |
254 |     integer(4.2) :: ifoix
    |             ^^^ 

semantic error: Kind 6 is not supported for Complex
   --> tests/errors/continue_compilation_2.f90:256:13
    |
256 |     complex(6) :: iiocx
    |             ^ 

semantic error: Kind 3 is not supported for Integer
   --> tests/errors/continue_compilation_2.f90:258:13
    |
258 |     integer(3) :: iifix
    |             ^ 

semantic error: Kind 10 is not supported for Logical
   --> tests/errors/continue_compilation_2.f90:260:13
    |
260 |     logical(10) :: iiolx
    |             ^^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:262:13
    |
262 |     complex(*) :: ksoca
    |             ^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:264:13
    |
264 |     integer(*) :: ksoia
    |             ^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:266:13
    |
266 |     logical(*) :: ksola
    |             ^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters
   --> tests/errors/continue_compilation_2.f90:268:13
    |
268 |     integer('a') :: ksoix
    |             ^^^ 

semantic error: Parameter 'kvoia' is a variable, which does not reduce to a constant expression
   --> tests/errors/continue_compilation_2.f90:271:10
    |
271 |     real(kvoia) :: kvoix
    |          ^^^^^ 

semantic error: Symbol is already declared in the same scope
   --> tests/errors/continue_compilation_2.f90:273:16
    |
273 |     real(3) :: x
    |                ^ redeclaration
    |
198 |     integer, parameter :: x = 2
    |                           ~~~~~ original declaration

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:275:10
    |
275 |     real(*) kind2_a
    |          ^ 

semantic error: Parameter attribute cannot be used with Target attribute
   --> tests/errors/continue_compilation_2.f90:277:5
    |
277 |     integer, parameter, target :: foo=4
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Argument was not specified
   --> tests/errors/continue_compilation_2.f90:282:33
    |
282 |     type(Circle) :: myCircle2 = Circle()
    |                                 ^^^^^^^^ Argument 'radius' not specified for circle

semantic error: Keyword argument not found
   --> tests/errors/continue_compilation_2.f90:284:33
    |
284 |     type(Circle) :: myCircle3 = Circle(mykeyword=10)
    |                                 ^^^^^^^^^^^^^^^^^^^^ 'mykeyword' keyword argument not found

semantic error: Incompatible ranks 2 and 1 in assignment
   --> tests/errors/continue_compilation_2.f90:287:36
    |
287 |     integer, dimension(3,2) :: m = [ 1, 0, 0, 2, 4, 6 ]
    |                                    ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Assumed-rank variable 'aRank1' must be a dummy argument.
   --> tests/errors/continue_compilation_2.f90:303:16
    |
303 |     integer :: aRank1(..)
    |                ^^^^^^^^^^ 

semantic error: Array 'a_deferred' with a deferred shape cannot be a local variable; it must be a dummy argument, allocatable, or pointer
   --> tests/errors/continue_compilation_2.f90:309:16
    |
309 |     integer :: a_deferred(:)
    |                ^^^^^^^^^^^^^ 

semantic error: The restriction argument cc2_lt_my_type must be pure
   --> tests/errors/continue_compilation_2.f90:342:42
    |
342 |     instantiate cc2_apply_t(cc2_my_type, cc2_lt_my_type), only : cc2_my_apply => cc2_apply_lt
    |                                          ^^^^^^^^^^^^^^ requires a pure function
    |
138 |        impure elemental function cc2_lt_my_type(lhs, rhs) result(res)
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
    |
142 |        end function
    | ...^^^^^^^^^^^^^^^^ cc2_lt_my_type is not pure

semantic error: More than one main program found
   --> tests/errors/continue_compilation_2.f90:178:1 - 630:11
    |
178 |    program continue_compilation_2
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
    |
630 |    end program
    | ...^^^^^^^^^^^ first main program defined here
    |
633 |    program second_program_test
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
    |
636 |    end program second_program_test
    | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ second main program defined here

semantic error: Unexpected args, SetExponent expects (real, int) as arguments
  --> tests/errors/continue_compilation_2.f90:36:18
   |
36 |         print *, set_exponent([1, 2, 3], 2)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Cannot assign to an intent(in) variable `y`
  --> tests/errors/continue_compilation_2.f90:41:9
   |
41 |         y = 99  
   |         ^ 

semantic error: Argument `val_a` with intent(in) passed to a dummy argument with modifying intent
  --> tests/errors/continue_compilation_2.f90:63:20
   |
63 |         call sub_b(val_a)
   |                    ^^^^^ 

semantic error: Argument `val_a` with intent(in) passed to a dummy argument with modifying intent
  --> tests/errors/continue_compilation_2.f90:73:26
   |
73 |         res = inner_func(val_a)
   |                          ^^^^^ 

semantic error: Dummy argument 'this' has `intent(out)` and cannot be used for array bounds declaration
  --> tests/errors/continue_compilation_2.f90:98:27
   |
98 |             real :: array(this%n)
   |                           ^^^^^^ hint: use `intent(in/inout)` or `allocatable` for 'this', or pass the size as a separate `intent(in)` argument

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:100:13
    |
100 |             array = [ (i,i = 1,this%n) ]
    |             ^^^^^   ^^^^^^^^^^^^^^^^^^^^ type mismatch (`integer` and `integer[:]`)

semantic error: PRINT statement is not allowed inside a PURE procedure
   --> tests/errors/continue_compilation_2.f90:117:9
    |
117 |         print "(A,I0)", 'b = ', b
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Deferred-length CHARACTER variable must be allocated with a character length `character(..)`
   --> tests/errors/continue_compilation_2.f90:351:14
    |
351 |     allocate(str1(i))
    |              ^^^^^^^ 

semantic error: No custom operator exists for this expression
   --> tests/errors/continue_compilation_2.f90:354:15
    |
354 |     str_t_2 = prefix // 10
    |               ^^^^^^^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:354:5
    |
354 |     str_t_2 = prefix // 10
    |     ^^^^^^^             ^^ type mismatch (string_t and integer)

semantic error: No custom operator exists for this expression
   --> tests/errors/continue_compilation_2.f90:355:15
    |
355 |     str_t_2 = prefix // str_t_1
    |               ^^^^^^^^^^^^^^^^^ 

semantic error: shape argument specified in c_f_pointer even though fptr is not an array.
   --> tests/errors/continue_compilation_2.f90:357:38
    |
357 |     call c_f_pointer(queries_1, y_1, [2])
    |                                      ^^^ 

semantic error: shape array passed to c_f_pointer must be of rank 1 but given rank is 2
   --> tests/errors/continue_compilation_2.f90:359:38
    |
359 |     call c_f_pointer(queries_2, y_2, shape)
    |                                      ^^^^^ 

semantic error: Cannot assign to a constant variable
   --> tests/errors/continue_compilation_2.f90:361:5
    |
361 |     x = 1
    |     ^^^^^ assignment here
    |
198 |     integer, parameter :: x = 2
    |                           ~~~~~ declared as constant

semantic error: More actual than formal arguments in procedure call
   --> tests/errors/continue_compilation_2.f90:364:33
    |
364 |     call myCircle%calculateArea(circleArea, 12)
    |                                 ^^^^^^^^^^^^^^ 

semantic error: Invalid argument `end` supplied
   --> tests/errors/continue_compilation_2.f90:366:5
    |
366 |     CLOSE(end=200)
    |     ^^^^^^^^^^^^^^ 

semantic error: Missing actual argument 'x' in call to 'cmplx'
   --> tests/errors/continue_compilation_2.f90:368:14
    |
368 |     print *, cmplx(y = 2)
    |              ^^^^^^^^^^^^ 

semantic error: Only a literal constant or a named constant is allowed as part of a complex literal constant
   --> tests/errors/continue_compilation_2.f90:370:20
    |
370 |     print*, cmplx((real(1, kind=4), 0.00000000), kind=8)
    |                    ^^^^^^^^^^^^^^^ 

semantic error: Only a literal constant or a named constant is allowed as part of a complex literal constant
   --> tests/errors/continue_compilation_2.f90:372:32
    |
372 |     print*, cmplx((1.00000000, real(0, kind=4)), kind=8)
    |                                ^^^^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:380:5
    |
380 |     call event_query(1, 1, 1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Operands of comparison operator are of different types
   --> tests/errors/continue_compilation_2.f90:384:9
    |
384 |     if (i > x_2) then
    |         ^^^^^^^ 

semantic error: dim has already been specified as a positional/keyword argument to size
   --> tests/errors/continue_compilation_2.f90:388:14
    |
388 |     size_a = size(a_2, 1, dim=1)
    |              ^^^^^^^^^^^^^^^^^^^ 

semantic error: dim has already been specified as a positional/keyword argument to size
   --> tests/errors/continue_compilation_2.f90:389:14
    |
389 |     size_a = size(a_2, dim = 1, 1)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
   --> tests/errors/continue_compilation_2.f90:391:31
    |
391 |     size_a_2 = size(a_3, kind=kindvar, dim=1)
    |                               ^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
   --> tests/errors/continue_compilation_2.f90:392:31
    |
392 |     size_a_2 = size(a_3, kind=kindvar)
    |                               ^^^^^^^ 

semantic error: Atomic operations are not supported yet
   --> tests/errors/continue_compilation_2.f90:394:5
    |
394 |     call atomic_add (atom[1], this_image())
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Atomic operations are not supported yet
   --> tests/errors/continue_compilation_2.f90:395:5
    |
395 |     call atomic_add (atom[2], this_image())
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type-spec cannot contain an asterisk for a type parameter
   --> tests/errors/continue_compilation_2.f90:397:14
    |
397 |     print *, [character(*) :: "a", "b", "ball", "cat"]
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Different `character` lengths 1 and 4 in array constructor
   --> tests/errors/continue_compilation_2.f90:399:25
    |
399 |     print *, ["a", "b", "ball", "cat"]
    |                         ^^^^^^ 

semantic error: Different `character` lengths 2 and 5 in array constructor
   --> tests/errors/continue_compilation_2.f90:400:27
    |
400 |     print *, ["a1", "b1", "ball1", "cat1"]
    |                           ^^^^^^^ 

semantic error: Element in `real(8)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:403:20
    |
403 |     print *, [x_3, [1., 2.]]
    |                    ^^^^^^^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:405:18
    |
405 |     print *, [1, 2.]
    |                  ^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:407:18
    |
407 |     print *, [1, [1., 2.]]
    |                  ^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
   --> tests/errors/continue_compilation_2.f90:409:14
    |
409 |     print *, dfloat(y_3)
    |              ^^^^^^^^^^^ 

semantic error: `dim` argument of `Sum` intrinsic must be INTEGER
   --> tests/errors/continue_compilation_2.f90:411:29
    |
411 |     print *, sum([1, 2, 3], 1.1)
    |                             ^^^ 

semantic error: `mask` argument to `Sum` must be a scalar or array of logical type
   --> tests/errors/continue_compilation_2.f90:413:32
    |
413 |     print *, sum([1, 2, 3], 1, 1.1)
    |                                ^^^ 

semantic error: `dim` argument of `Sum` intrinsic must be INTEGER
   --> tests/errors/continue_compilation_2.f90:415:29
    |
415 |     print *, sum([1, 2, 3], .true., 1.1)
    |                             ^^^^^^ 

semantic error: Too many arguments to call `dint`
   --> tests/errors/continue_compilation_2.f90:417:13
    |
417 |     print*, dint(1.0_8, 8)
    |             ^^^^^^^^^^^^^^ 

semantic error: Too many arguments to call `dint`
   --> tests/errors/continue_compilation_2.f90:418:13
    |
418 |     if (abs(dint(1.0_8, 8) - 1.0_8) > 10e-5 ) error stop
    |             ^^^^^^^^^^^^^^ 

semantic error: Argument 1 of dlgama must be of double precision real type
   --> tests/errors/continue_compilation_2.f90:420:14
    |
420 |     print *, dlgama(2.7)
    |              ^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
   --> tests/errors/continue_compilation_2.f90:422:13
    |
422 |     print*, dnint(1.0_8, 8)
    |             ^^^^^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
   --> tests/errors/continue_compilation_2.f90:423:13
    |
423 |     if (abs(dnint(1.0_8, 8) - 1.0_8) > 10e-5 ) error stop
    |             ^^^^^^^^^^^^^^^ 

semantic error: Do concurrent loop variable `j` cannot be part of local expression
   --> tests/errors/continue_compilation_2.f90:425:30
    |
425 |     do concurrent (j = 1:Ny) local(i_1, j)
    |                              ^^^^^^^^^^^^^ 

semantic error: Assignment to loop variable `i_2` is not allowed
   --> tests/errors/continue_compilation_2.f90:432:9
    |
432 |         i_2 = j_1 + 1
    |         ^^^ 

semantic error: Step expression (Increment) in DO loop cannot be zero
   --> tests/errors/continue_compilation_2.f90:438:20
    |
438 |     do i_2 = 1, 5, 0
    |                    ^ 

semantic error: first argument of `dprod` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:442:13
    |
442 |     print*, dprod(4.23_8, 4.3_8)
    |             ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Dreal expects (complex64) as arguments
   --> tests/errors/continue_compilation_2.f90:445:14
    |
445 |     print *, dreal(a_4)
    |              ^^^^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'complex' intrinsic. It accepts exactly 2 arguments.
   --> tests/errors/continue_compilation_2.f90:447:11
    |
447 |     a_5 = complex(1)
    |           ^^^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
   --> tests/errors/continue_compilation_2.f90:449:14
    |
449 |     print *, float(y_4)
    |              ^^^^^^^^^^ 

semantic error: Invalid argument `start` supplied
   --> tests/errors/continue_compilation_2.f90:451:5
    |
451 |     FLUSH(unit=10, start=100)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type mismatch in argument `x`: expected `integer(4)` but got `real(4)`.
   --> tests/errors/continue_compilation_2.f90:453:16
    |
453 |     print *, f(42.9)
    |                ^^^^ 

semantic error: Argument 1 to Ichar must have length 1
   --> tests/errors/continue_compilation_2.f90:455:13
    |
455 |     print*, ichar("okay")
    |             ^^^^^^^^^^^^^ 

semantic error: first argument of `idint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:457:14
    |
457 |     print *, idint(4.5)
    |              ^^^^^^^^^^ 

semantic error: first argument of `ifix` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:459:14
    |
459 |     print *, ifix(4.23_8)
    |              ^^^^^^^^^^^^ 

semantic error: Different shape for array assignment on dimension 1(1 and 3)
   --> tests/errors/continue_compilation_2.f90:462:5
    |
462 |     arr1 = [1, 2, 3]
    |     ^^^^^^^^^^^^^^^^ 

semantic error: Different shape for array assignment on dimension 3(1 and 2)
   --> tests/errors/continue_compilation_2.f90:466:5
    |
466 |     idaa2_y = idaa2_x
    |     ^^^^^^^^^^^^^^^^^ 

semantic error: Shapes for operands are not conformable
   --> tests/errors/continue_compilation_2.f90:468:14
    |
468 |     print *, idlalb1_x .neqv. [.true., .true.]
    |              ^^^^^^^^^        ^^^^^^^^^^^^^^^^ 

semantic error: Shapes for operands are not conformable
   --> tests/errors/continue_compilation_2.f90:470:14
    |
470 |     print *, idlalb2_x1 .neqv. idlalb2_x2
    |              ^^^^^^^^^^        ^^^^^^^^^^ 

semantic error: Incompatible ranks 2 and 1 in assignment
   --> tests/errors/continue_compilation_2.f90:472:5
    |
472 |     iraa1_arr1 = [1, 2, 3]
    |     ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Incompatible ranks 1 and 3 in assignment
   --> tests/errors/continue_compilation_2.f90:474:5
    |
474 |     iraa2_arr3 = iraa2_arr1
    |     ^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: the first array argument to `where` must be of type logical
   --> tests/errors/continue_compilation_2.f90:476:11
    |
476 |     where([1, 2, 3, 4, 5]) iatw1_b = 1
    |           ^^^^^^^^^^^^^^^ 

semantic error: the first array argument to `where` must be of type logical
   --> tests/errors/continue_compilation_2.f90:481:11
    |
481 |     where(iatw2_i1) iatw2_b = 1
    |           ^^^^^^^^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:485:11
    |
485 |     where(.true.) itw1_b = 12121
    |           ^^^^^^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:488:11
    |
488 |     where(1) itw2_b = 12121
    |           ^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:491:11
    |
491 |     where(max(1.33, 2.67)) itw3_b = 12121
    |           ^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Radix expects (int) or (real) as arguments
   --> tests/errors/continue_compilation_2.f90:497:14
    |
497 |     print *, radix((2.4, 1.0))
    |              ^^^^^^^^^^^^^^^^^ 

semantic error: datan2 was declared as a variable, it can't be called as a function
   --> tests/errors/continue_compilation_2.f90:501:14
    |
501 |     print *, datan2(x,y)
    |              ^^^^^^^^^^^ help: use the compiler option "--implicit-interface" to use intrinsic functions

semantic error: datan2 was declared as a variable, it can't be called as a function
   --> tests/errors/continue_compilation_2.f90:502:12
    |
502 |     if(abs(datan2(x,y) - 0.59941916594660438) > 1d-6) error stop
    |            ^^^^^^^^^^^ help: use the compiler option "--implicit-interface" to use intrinsic functions

semantic error: `pos` argument of `ibclr` intrinsic must be non-negative
   --> tests/errors/continue_compilation_2.f90:504:14
    |
504 |     print *, ibclr(1, -2)
    |              ^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Dshiftl must be the same
   --> tests/errors/continue_compilation_2.f90:506:14
    |
506 |     print *, dshiftl(1, 1_8, 1)
    |              ^^^^^^^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Ior must be the same
   --> tests/errors/continue_compilation_2.f90:508:14
    |
508 |     print *, ior(1, 1_8)
    |              ^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Ieor must be the same
   --> tests/errors/continue_compilation_2.f90:510:14
    |
510 |     print *, ieor(1, 1_8)
    |              ^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Hypot must be the same
   --> tests/errors/continue_compilation_2.f90:512:14
    |
512 |     print *, hypot(1.0, 2.7_8)
    |              ^^^^^^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Ior must be the same
   --> tests/errors/continue_compilation_2.f90:514:14
    |
514 |     print *, ior(intr8_x, intr8_y)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Iand must be the same
   --> tests/errors/continue_compilation_2.f90:516:14
    |
516 |     print *, iand(intr9_x, intr9_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Ieor must be the same
   --> tests/errors/continue_compilation_2.f90:518:14
    |
518 |     print *, ieor(intr10_x, intr10_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Hypot must be the same
   --> tests/errors/continue_compilation_2.f90:522:14
    |
522 |     print *, hypot(intr11_x, intr11_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: All arguments to max0 must be of the same type
   --> tests/errors/continue_compilation_2.f90:524:14
    |
524 |     print *, max(12, 13.94)
    |              ^^^^^^^^^^^^^^ 

semantic error: All arguments to min0 must be of the same type
   --> tests/errors/continue_compilation_2.f90:526:14
    |
526 |     print *, min(12, 13.94)
    |              ^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Scale expects (real, int) as arguments
   --> tests/errors/continue_compilation_2.f90:528:14
    |
528 |     print *, scale([1, 2, 3], 2)
    |              ^^^^^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, SetExponent expects (real, int) as arguments
   --> tests/errors/continue_compilation_2.f90:530:14
    |
530 |     print *, set_exponent([1, 2, 3], 2)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Non-variable expression for `iostat`
   --> tests/errors/continue_compilation_2.f90:533:5
    |
533 |     read(ici_buffer, *, iostat=ici_ios)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `iostat` must be scalar
   --> tests/errors/continue_compilation_2.f90:536:5
    |
536 |     read(insv_buffer, *, iostat=insv_ios(1:1))
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: The SHIFT argument must be less than or equal to the of SIZE argument
   --> tests/errors/continue_compilation_2.f90:538:14
    |
538 |     print *, ishftc(10, 6, 4)
    |              ^^^^^^^^^^^^^^^^ 

semantic error: The first argument of `cmplx` intrinsic is of complex type, the second argument in this case must be absent
   --> tests/errors/continue_compilation_2.f90:540:14
    |
540 |     print *, cmplx(complex_z , 1)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: `kind` argument of `aint` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:542:36
    |
542 |     print *, aint([1.0, 2.0, 3.0], [4, 4])
    |                                    ^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:544:5
    |
544 |     tm1_x = "x"
    |     ^^^^^   ^^^ type mismatch (integer and string)

semantic error: Type mismatch in binary operator, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:546:13
    |
546 |     tm2_x = 5 + "x"
    |             ^   ^^^ type mismatch (integer and string)

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:546:5
    |
546 |     tm2_x = 5 + "x"
    |     ^^^^^       ^^^ type mismatch (integer and string)

semantic error: Variable 'mycircle' doesn't have any member named, 'mymember'.
   --> tests/errors/continue_compilation_2.f90:553:14
    |
553 |     print *, myCircle%mymember
    |              ^^^^^^^^^^^^^^^^^ 

semantic error: Unequal character lengths in MERGE intrinsic
   --> tests/errors/continue_compilation_2.f90:557:13
    |
557 |     print*, merge("okay", "ok", .true.)
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: first argument of `idint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:559:14
    |
559 |     print *, idint(4.23)
    |              ^^^^^^^^^^^ 

semantic error: first argument of `idint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:560:14
    |
560 |     print *, idint(idint_kind_mismatch)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Argument 1 to Ichar must have length 1
   --> tests/errors/continue_compilation_2.f90:562:14
    |
562 |     print *, ichar(ichar_runtime)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: first argument of `dprod` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:564:14
    |
564 |     print *, dprod(dprod_1, dprod_2)
    |              ^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: second argument of `dprod` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:565:14
    |
565 |     print *, dprod(dprod_3, dprod_2)
    |              ^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: first argument of `idnint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:567:14
    |
567 |     print *, idnint(3.5)
    |              ^^^^^^^^^^^ 

semantic error: first argument of `idnint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:568:14
    |
568 |     print *, idnint(idnint_runtime)
    |              ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: first argument of `ifix` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:570:14
    |
570 |     print *, ifix(4.23_8)
    |              ^^^^^^^^^^^^ 

semantic error: first argument of `ifix` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:571:14
    |
571 |     print *, ifix(ifix_runtime)
    |              ^^^^^^^^^^^^^^^^^^ 

semantic error: Arguments to min0 must be of real, integer or character type
   --> tests/errors/continue_compilation_2.f90:573:14
    |
573 |     print *, min(.true., .false.)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Arguments to min0 must be of real, integer or character type
   --> tests/errors/continue_compilation_2.f90:574:14
    |
574 |     print *, min(min_max, min_max)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Arguments to max0 must be of real, integer or character type
   --> tests/errors/continue_compilation_2.f90:576:14
    |
576 |     print *, max(.true., .false.)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Arguments to max0 must be of real, integer or character type
   --> tests/errors/continue_compilation_2.f90:577:14
    |
577 |     print *, max(min_max, min_max)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Argument of 'size' must be an array
   --> tests/errors/continue_compilation_2.f90:582:19
    |
582 |     print *, size(ichar_runtime)
    |                   ^^^^^^^^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:583:5
    |
583 |     lhs = rhs
    |     ^^^   ^^^ type mismatch (`string` and `string[:]`)

semantic error: Missing actual argument 'string' in call to 'index'
   --> tests/errors/continue_compilation_2.f90:584:14
    |
584 |     print *, index( substring = 'de', back = .true. )
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Function 'compiler_options' not found (not user defined nor intrinsic)
   --> tests/errors/continue_compilation_2.f90:585:14
    |
585 |     print *, compiler_options()
    |              ^^^^^^^^^^^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:586:11
    |
586 |     print "(AF9.6)", 'pi =', 4*atan(1.0)
    |           ^^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:587:14
    |
587 |     write (*,"(ai0)", iostat=ierr) "hi", 3
    |              ^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:589:14
    |
589 |     write (*,badfmt_p) "hi", 3
    |              ^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:590:14
    |
590 |     write (*,badfmt_s) "hi", 3
    |              ^^^^^^^^ 

semantic error: Function 'add_parens' not found (not user defined nor intrinsic)
   --> tests/errors/continue_compilation_2.f90:591:15
    |
591 |     write (*, add_parens (badfmt_s)) "hi", 3
    |               ^^^^^^^^^^^^^^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:593:11
    |
593 |     print "(aai6)", a,"hi",15
    |           ^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:593:11
    |
593 |     print "(aai6)", a,"hi",15
    |           ^^^^^^^^ 

warning: `sleep` is a non-standard extension
   --> tests/errors/continue_compilation_2.f90:594:5
    |
594 |     call sleep(1)
    |     ^^^^^^^^^^^^^ not part of the Fortran standard

semantic error: Missing actual argument 'x' in call to 'cmplx'
   --> tests/errors/continue_compilation_2.f90:595:9
    |
595 |     a = cmplx(y = 2)
    |         ^^^^^^^^^^^^ 

semantic error: shape argument not specified in c_f_pointer even though fptr is an array.
   --> tests/errors/continue_compilation_2.f90:597:33
    |
597 |     call c_f_pointer(queries_3, cfp_y_3)    
    |                                 ^^^^^^^ 

semantic error: Dummy argument 'x' of pure function must have INTENT(IN) or VALUE attribute
   --> tests/errors/continue_compilation_2.f90:641:20
    |
641 |         integer :: x, y
    |                    ^ 

semantic error: Dummy argument 'y' of pure function must have INTENT(IN) or VALUE attribute
   --> tests/errors/continue_compilation_2.f90:641:23
    |
641 |         integer :: x, y
    |                       ^ 
